Fix container to wrap section contents

--- a/css/layout.css
+++ b/css/layout.css
@@ -130,6 +130,7 @@ p {
 
 .container {
   margin: 0 auto;
+  max-width: 1024px;
   padding-left: 15px;
   padding-right: 15px;
 }
